	contributed.

	Luke: We have reworked some parts of the conversation windows in
	response to user comments.  We did not quite reach 100 tickets
	closed this release, so a fair few will role over again.  Still,
	we are slowly but surely working our way through the reported bugs.
	Many thanks to everyone who has helped with tracking down the
	various issues, testing fixes, and getting patches in.

2.1.0 (7/28/2007):
	Sean: This release took a bit longer than 3 weeks, but boy is it 
	worth it! We're beginning to experiment with new UI concepts and
	this release features a largely re-designed conversation window.
	We've closed 150 tickets for this release; much thanks go to all
	the developers, translators, and testers who made this possible.

	Ka-Hing: Sean said no one else NEWS'ed, so I figure I should.

2.0.2 (6/14/2007):
	Sean: Another big maintenance release. Again, about 100 tickets were
	resolved in this release, and they keep coming in. Lots of bug fixes,
	some minor icon adjustements, hopefully we addressed some ICQ
	internationalization issues, and support for Bonjour on Windows!
	Our next release will be 2.1.0, and will come with some great new
	features.

	Stu: I think we're gradually getting the hang of this 3 week thing
	again. This release includes yet more bug fixes. I'd also like to
	specifically thank Pekka Riikonen for the patch to enable using SILC
	Toolkit 1.1 with Pidgin/libpurple that is included in this release.

2.0.1 (5/24/2007):
	Sean: 2.0.1! Three weeks later, as scheduled! It is so nice to have
	regular, frequent, releases again! This is a bugfix release; We have
	fixed over 100 issues reported to us at http://developer.pidgin.im.
	Thanks to everyone for their great work, and look for the next release
	in another three weeks!

	Stu: Lots'o'fixes in this. I don't know how you users find so many
	things for us to fix. 24 hours in a day (sadly). 24 is divisible by the
	sum of its digits and by their product. It is the smallest composite