@@ -27,6 +27,7 @@
 
 #include <gnt.h>
 #include <gntwidget.h>
+#include <gntmenuitem.h>
 
 #include "conversation.h"
 
@@ -50,7 +51,7 @@ struct _FinchConv
 	GntWidget *window;        /* the container */
 	GntWidget *entry;         /* entry */
 	GntWidget *tv;            /* text-view */
-	GntWidget *menu;          /* future use */
+	GntWidget *menu;
 	GntWidget *info;
 	void *pad;
 
@@ -70,7 +71,7 @@ struct _FinchConvChat
 
 struct _FinchConvIm
 {
-	void *nothing_for_now;
+	GntMenuItem *sendto;
 	void *something_for_later;
 };
 
